2006-04-15 Scott Dattalo <scott@dattalo.com>
	* regression/switch_test/switch_test.asm: corrected 'capacitance'

2006-04-15 Borut Razem <borut.razem@siol.net>
	* cli/cli.vcproj, cli/makefile.mingw: added define YYSTACK_USE_ALLOCA
	* src/a2dconverter.*: svn:keywords=Author Date Id Revision,
	  svn:eol-style=native
	* src/a2dconverter.cc: corrected include path to "../config.h"
	* regression/switch_test/switch_test.stc: corected 'capacitance'

2006-04-15 Scott Dattalo <scott@dattalo.com>
	* src/16bit-registers.h, src/16bit-processors.cc,
	  src/16bit-registers.cc, src/16bit-processors.h, src/p18x.cc,
	  src/a2dconverter.cc:
	  A2D is now working (but not fully tested) for the 16bit core.
	* src/pir.h: Redesigned PIR base class in the first attempt in
	  removing PIR_SET classes
	* src/symbol.cc, src/stimuli.cc: Fixed symbol table dump.
	* regression/a2d/Makefile, regression/a2d/p18f452.asm: Regression
	  test for the 18f452 A2D converter.
	* modules/resistor.cc: Made 'Capacitance' attribute lower case.

2006-04-13 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src_asm.cc: removed debug printf
	* modules/resistor.cc: Added module description.
	* src/a2dconvert.cc: Added a verbose mode printf debug statement.
	* src/p16x7x.cc: P16C71 class now sets A2D converter bits.
	* src/symbol.cc, src/symbol.h: module_symbol can now display a
	module description.
	* regression/run_regression.sh: added A2D regression test for the
	p16c71.
	* a2d/Makefile, a2d/p16c71.asm, a2d/16c71.lkr: A2D regression test
	for the 16c71.


2006-04-13 Borut Razem <borut.razem@siol.net>
	* gui/gui_src_asm.cc: removed warnings
	* modules/switch.h, src/dspic/dspic-processors.h, src/operator.h:
	  enable compilation on Fedora Core 5 (gcc 4.1.0)
	* regression/comparator/compar_628.stc,
	  regression/comparator/compar_673a.stc,
	  regression/comparator/compar_677.stc,
	  regression/eeprom_wide/eeprom_wide.stc: changed libgpsim_modules.so
	  with libgpsim_modules so that it runs on WIN32