@@ -73,3 +73,5 @@ ${RT} comparator sim_628
 ${RT} comparator sim_877a
 
 ${RT} a2d sim_71
+
+${RT} ttl sim_377
