@@ -1,0 +1,23 @@
+// $Id: 18f452.lkr 1458 2006-02-18 05:12:33Z sdattalo $
+// File: 18f452.lkr
+// Sample linker script for the PIC18F452 processor
+
+LIBPATH .
+
+
+CODEPAGE   NAME=page       START=0x00           END=0x7FFF
+CODEPAGE   NAME=idlocs     START=0x200000       END=0x200007       PROTECTED
+CODEPAGE   NAME=config     START=0x300000       END=0x30000D       PROTECTED
+CODEPAGE   NAME=devid      START=0x3FFFFE       END=0x3FFFFF       PROTECTED
+CODEPAGE   NAME=eedata     START=0xF00000       END=0xF000FF       PROTECTED
+
+ACCESSBANK NAME=accessram  START=0x0            END=0x7F
+DATABANK   NAME=gpr0       START=0x80           END=0xFF
+DATABANK   NAME=gpr1       START=0x100          END=0x1FF
+DATABANK   NAME=gpr2       START=0x200          END=0x2FF
+DATABANK   NAME=gpr3       START=0x300          END=0x3FF
+DATABANK   NAME=gpr4       START=0x400          END=0x4FF
+DATABANK   NAME=gpr5       START=0x500          END=0x5FF
+ACCESSBANK NAME=accesssfr  START=0xF80          END=0xFFF          PROTECTED
+
+SECTION    NAME=CONFIG     ROM=config
